# apex-small-fry-duo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  DebugLog.cpp  DebugLog.h  EngineConfig.h  Timer.cpp  Timer.h
src/input/: Input.cpp  Input.h
src/platform/: Window.cpp  Window.h
src/renderer/: Renderer.cpp  Renderer.h
src/renderer/shaders/: Triangle.hlsl
